<resources>
    <string name="app_name">32_SQLITE_CRUD</string>
    <string name="StudentName">Enter student name</string>
    <string name="RollNumber">Enter roll number</string>
    <string name="IsEnrolled">IsEnrolled</string>
    <string name="ButtonViewAll">View All Records</string>
    <string name="Add">Add Record</string>
    <string name="Update">Update Record</string>
    <string name="Delete">Delete Record</string>
</resources>